--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,16 @@ charset-normalizer==3.1.0
 cleo==2.0.1
 crashtest==0.4.1
 cryptography==39.0.2
+Deprecated==1.3.1
 distlib==0.3.6
 docutils==0.22.2
+docx==0.2.4
 dulwich==0.21.3
 filelock==3.9.0
 filetype==1.2.0
 html5lib==1.1
 idna==3.4
+img2pdf==0.6.3
 importlib-metadata==6.0.0
 installer==0.6.0
 jaraco.classes==3.2.3
@@ -23,10 +26,13 @@ keyring==23.13.1
 Kivy==2.3.1
 Kivy-Garden==0.1.5
 lockfile==0.12.2
+lxml==6.0.2
 more-itertools==9.1.0
 msgpack==1.0.5
 packaging==23.0
 pexpect==4.8.0
+pikepdf==10.0.0
+pillow==12.0.0
 pipenv==2023.2.18
 pkginfo==1.9.6
 platformdirs==2.6.2
@@ -39,15 +45,19 @@ Pygments==2.19.2
 pypdf==6.1.1
 pyproject_hooks==1.0.0
 pyrsistent==0.19.3
+python-docx==1.2.0
 rapidfuzz==2.15.1
 requests==2.28.2
 requests-toolbelt==0.10.1
 SecretStorage==3.3.3
 shellingham==1.5.0.post1
+six==1.17.0
 tomlkit==0.11.6
 trove-classifiers==2023.3.9
+typing_extensions==4.15.0
 urllib3==1.26.15
 virtualenv==20.20.0
 virtualenv-clone==0.5.7
 webencodings==0.5.1
+wrapt==2.0.1
 zipp==3.15.0
